# mobilect-job-orders

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  application.ui  application.vala  config.vapi  database.vala  date-util.vala  invoice-editor.ui  invoice-editor.vala  invoice-list-view.ui  invoice-list-view.vala  job-order-editor.ui  job-order-editor.vala  job-order-list-view.ui  job-order-list-view.vala  main.vala  mobilect-job-orders.gresource.xml  purchase-order-editor.ui  purchase-order-editor.vala  purchase-order-list-view.ui  purchase-order-list-view.vala  window.ui  window.vala
vapi/: Makefile.am  libgda-5.0.vapi
